--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-    <div class="header container">
-        <a href="#"><img src="image/logo.png" alt="Логотип" />
+    <div class="header">
+        <div class="container">
+<a href="#"><img src="image/logo.png" alt="Логотип" />
         </a>
         <div class="nav">
             <a class="nav-link" href="#">Программа обучения</a>
@@ -34,6 +35,8 @@
             </a>
             </a>
         </div>
+        </div>
+        
     </div>
     <div class="hero container">
         <div class="hero-left">
